// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return correct shape for initial customer data 1`] = `
Object {
  "cancelUpdateMode": [Function],
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleSubmit": [Function],
  "initialValues": Object {
    "customer": Object {
      "email": "foobar@express.net",
      "firtname": "Foo",
      "id": null,
      "lastname": "Bar",
    },
  },
  "isChangingPassword": false,
  "isDisabled": false,
  "isSignedIn": true,
  "isUpdateMode": false,
  "loadDataError": null,
  "showChangePassword": [Function],
  "showUpdateMode": [Function],
}
`;

exports[`return correct shape for new value and fire create mutation update customer information 1`] = `
Object {
  "cancelUpdateMode": [Function],
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleSubmit": [Function],
  "initialValues": Object {
    "customer": Object {
      "email": "barfoo@express.net",
      "firtname": "Bar",
      "id": 7,
      "lastname": "Foo",
    },
  },
  "isChangingPassword": false,
  "isDisabled": false,
  "isSignedIn": true,
  "isUpdateMode": false,
  "loadDataError": null,
  "showChangePassword": [Function],
  "showUpdateMode": [Function],
}
`;

exports[`return correct shape for new value and fire create mutation update customer information 2`] = `
Object {
  "variables": Object {
    "email": "foobar@express.net",
    "firtname": "Foo",
    "lastname": "Bar",
  },
}
`;

exports[`return correct shape while data is loading 1`] = `
Object {
  "cancelUpdateMode": [Function],
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleSubmit": [Function],
  "initialValues": undefined,
  "isChangingPassword": false,
  "isDisabled": false,
  "isSignedIn": true,
  "isUpdateMode": false,
  "loadDataError": undefined,
  "showChangePassword": [Function],
  "showUpdateMode": [Function],
}
`;
